--- a/UnitTest/packages.config
+++ b/UnitTest/packages.config
@@ -2,7 +2,50 @@
 <packages>
   <package id="BouncyCastle" version="1.8.9" targetFramework="net472" />
   <package id="DeepEqual" version="2.0.0" targetFramework="net472" />
+  <package id="JetBrains.Annotations" version="2021.1.0" targetFramework="net472" />
+  <package id="Microsoft.AspNetCore.Antiforgery" version="2.2.0" targetFramework="net472" />
+  <package id="Microsoft.AspNetCore.Authentication.Abstractions" version="2.2.0" targetFramework="net472" />
+  <package id="Microsoft.AspNetCore.Authentication.Core" version="2.2.0" targetFramework="net472" />
+  <package id="Microsoft.AspNetCore.Authorization" version="2.2.0" targetFramework="net472" />
+  <package id="Microsoft.AspNetCore.Authorization.Policy" version="2.2.0" targetFramework="net472" />
+  <package id="Microsoft.AspNetCore.Cryptography.Internal" version="2.2.0" targetFramework="net472" />
+  <package id="Microsoft.AspNetCore.DataProtection" version="2.2.0" targetFramework="net472" />
+  <package id="Microsoft.AspNetCore.DataProtection.Abstractions" version="2.2.0" targetFramework="net472" />
+  <package id="Microsoft.AspNetCore.Diagnostics.Abstractions" version="2.2.0" targetFramework="net472" />
+  <package id="Microsoft.AspNetCore.Hosting.Abstractions" version="2.2.0" targetFramework="net472" />
+  <package id="Microsoft.AspNetCore.Hosting.Server.Abstractions" version="2.2.0" targetFramework="net472" />
+  <package id="Microsoft.AspNetCore.Html.Abstractions" version="2.2.0" targetFramework="net472" />
+  <package id="Microsoft.AspNetCore.Http" version="2.2.0" targetFramework="net472" />
+  <package id="Microsoft.AspNetCore.Http.Abstractions" version="2.2.0" targetFramework="net472" />
+  <package id="Microsoft.AspNetCore.Http.Extensions" version="2.2.0" targetFramework="net472" />
+  <package id="Microsoft.AspNetCore.Http.Features" version="2.2.0" targetFramework="net472" />
+  <package id="Microsoft.AspNetCore.JsonPatch" version="2.2.0" targetFramework="net472" />
+  <package id="Microsoft.AspNetCore.Mvc.Abstractions" version="2.2.0" targetFramework="net472" />
+  <package id="Microsoft.AspNetCore.Mvc.Core" version="2.2.0" targetFramework="net472" />
+  <package id="Microsoft.AspNetCore.Mvc.DataAnnotations" version="2.2.0" targetFramework="net472" />
+  <package id="Microsoft.AspNetCore.Mvc.Formatters.Json" version="2.2.0" targetFramework="net472" />
+  <package id="Microsoft.AspNetCore.Mvc.ViewFeatures" version="2.2.0" targetFramework="net472" />
+  <package id="Microsoft.AspNetCore.ResponseCaching.Abstractions" version="2.2.0" targetFramework="net472" />
+  <package id="Microsoft.AspNetCore.Routing" version="2.2.0" targetFramework="net472" />
+  <package id="Microsoft.AspNetCore.Routing.Abstractions" version="2.2.0" targetFramework="net472" />
+  <package id="Microsoft.AspNetCore.WebUtilities" version="2.2.0" targetFramework="net472" />
   <package id="Microsoft.CSharp" version="4.5.0" targetFramework="net472" />
+  <package id="Microsoft.DotNet.PlatformAbstractions" version="2.1.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Configuration.Abstractions" version="2.2.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.DependencyInjection" version="2.2.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="2.2.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.DependencyModel" version="2.1.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.FileProviders.Abstractions" version="2.2.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Hosting.Abstractions" version="2.2.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Localization" version="2.2.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Localization.Abstractions" version="2.2.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Logging.Abstractions" version="2.2.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.ObjectPool" version="2.2.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Options" version="2.2.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Primitives" version="2.2.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.WebEncoders" version="2.2.0" targetFramework="net472" />
+  <package id="Microsoft.Net.Http.Headers" version="2.2.0" targetFramework="net472" />
+  <package id="Microsoft.Win32.Registry" version="4.5.0" targetFramework="net472" />
   <package id="MSTest.TestAdapter" version="2.1.1" targetFramework="net472" />
   <package id="MSTest.TestFramework" version="2.1.1" targetFramework="net472" />
   <package id="Nethereum.Hex" version="3.7.1" targetFramework="net472" />
@@ -10,7 +53,22 @@
   <package id="Nethereum.RLP" version="3.7.1" targetFramework="net472" />
   <package id="Nethereum.Signer" version="3.7.1" targetFramework="net472" />
   <package id="Nethereum.Util" version="3.7.1" targetFramework="net472" />
-  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net472" />
+  <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net472" />
+  <package id="Newtonsoft.Json.Bson" version="1.0.1" targetFramework="net472" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
   <package id="System.Collections.Immutable" version="1.3.0" targetFramework="net472" />
+  <package id="System.ComponentModel.Annotations" version="4.5.0" targetFramework="net472" />
+  <package id="System.Diagnostics.DiagnosticSource" version="4.5.0" targetFramework="net472" />
+  <package id="System.Memory" version="4.5.4" targetFramework="net472" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net472" />
+  <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.0.0" targetFramework="net472" />
+  <package id="System.Security.AccessControl" version="4.5.0" targetFramework="net472" />
+  <package id="System.Security.Cryptography.Xml" version="4.5.0" targetFramework="net472" />
+  <package id="System.Security.Permissions" version="4.5.0" targetFramework="net472" />
+  <package id="System.Security.Principal.Windows" version="4.5.0" targetFramework="net472" />
+  <package id="System.Text.Encodings.Web" version="6.0.0" targetFramework="net472" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.1" targetFramework="net472" />
   <package id="System.ValueTuple" version="4.3.0" targetFramework="net472" />
+  <package id="X.PagedList" version="8.4.0" targetFramework="net472" />
 </packages>
